fix: remove extra padding

--- a/css/style.sass
+++ b/css/style.sass
@@ -255,6 +255,7 @@ $feat-colors: #1f2367, #171c4f, #06233c, #132d45
 
 .client-img-section
   margin-top: 30px
+  margin-bottom: 30px
 
 .client-feedback
   background-color: #e6e6e6
@@ -621,6 +622,8 @@ $feat-colors: #1f2367, #171c4f, #06233c, #132d45
     top: 90px
   .testimonial-section img
     margin-top: 10px
+  .get-started-button
+    margin-top: 50px 
 
 
 @media only screen and (max-width: 1024px)
@@ -844,4 +847,4 @@ $feat-colors: #1f2367, #171c4f, #06233c, #132d45
     .trail-section
       width: 300px
     .get-started-button
-      width: 300px  
+      width: 300px
